--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
   "license": "ISC",
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.21.4",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "babel-loader": "^9.1.2",
+    "formik": "^2.4.5",
+    "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "uuid": "^9.0.0"
+    "redux-persist": "^6.0.0",
+    "uuid": "^9.0.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
@@ -35,6 +42,8 @@
     "@types/sass": "^1.45.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
+    "@wemake-services/eslint-config-javascript": "^2.1.1",
+    "@wemake-services/eslint-config-typescript": "^3.1.1",
     "css-loader": "^6.7.3",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
@@ -47,14 +56,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.1",
     "husky": "^4.3.8",
-    "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.1",
-    "node-sass": "^9.0.0",
     "plop": "^3.1.2",
     "prettier": "^2.8.8",
     "react-refresh": "^0.14.0",
-    "sass": "^1.62.0",
     "sass-loader": "^13.3.0",
     "style-loader": "^3.3.2",
     "typescript": "^5.0.4",
